# 2o48

game-2048-backend/: .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  jwtRS256_example.key  jwtRS256_example.key.pub  pyproject.toml  requirements.txt
game-2048-backend/apps/game_app/: admin.py  apps.py  models.py  permission.py  serializers.py  services.py  urls.py  views.py
game-2048-backend/apps/game_app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_gameplayed_options_alter_gameplayed_score_and_more.py  0004_userfeedback.py  0005_feedback_delete_userfeedback.py
game-2048-backend/apps/main/: admin.py  apps.py  choices.py  consts.py  email_gateway.py  forms.py  managers.py  models.py  permission.py  serializers.py  services.py  urls.py  utils.py  validators.py  views.py
game-2048-backend/apps/main/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0003_alter_customuser_customer_id_and_more.py  0004_customuser_profile_pick.py  0005_alter_customuser_profile_pick.py  0006_remove_customuser_profile_pick_and_more.py
game-2048-backend/apps/main/templates/main/: reg.html
game-2048-backend/backend/: settings.py  urls.py
game-2048-backend/docker/local/django/: .env.example  Dockerfile  entrypoint.sh
game-2048-backend/docker/local/postgres/: .env.example
game-2048-backend/docker/local/redis/: Dockerfile  redis.conf
game-2048-backend/docker/prod/django/: Dockerfile
game-2048-backend/locale/ru_RU/LC_MESSAGES/: django.po
game-2048-frontend/: .env.example  README.md  docker-compose.yml  (+3 more)
(+165 files in other folders)
